# ipa

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  pacman.rs  runner.rs  sheel.rs  shell.rs  symlink.rs
src/pacman/: apt.rs  mod.rs  pacman.rs
tests/: config.test.yml  pacman_test.rs
