[package]
name = "ipa"
version = "0.1.0"
authors = ["Matheus Alcantara <matheusssilv97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33.3"
shellexpand = "2.0"

[dev-dependencies]
tempfile = "3"
