[package]
name = "ipa"
version = "0.2.0"
authors = ["Matheus Alcantara <matheusssilv97@gmail.com>"]
description = "Another dotfiles manager that can install and configure your packages"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33.3"
shellexpand = "2.0"

[dev-dependencies]
tempfile = "3"
