[package]
name = "ipa"
version = "0.4.0-dev"
authors = ["Matheus Alcantara <matheusssilv97@gmail.com>"]
description = "Another dotfiles manager that can install and configure your packages"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/msAlcantara/ipa"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33.3"
shellexpand = "2.0"
log = { version = "0.4", features = ["std"] }
stderrlog = "0.5"


[dev-dependencies]
tempfile = "3"
